--- a/index.html
+++ b/index.html
@@ -1,35 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FlexBlog</title>
-  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-</head>
-<body>
-  <div class="super-info-bg">
-    <div class="super-info">
-      <p>Seg / Sex - 08:00 às 18:00</p>
-      <a href="tel:+5521999999999">+55 21 9 9999-9999</a>
-      <p>Av. Ali Perto, 330, Botafogo - RJ</p>
-    </div>
-  </div>
-  <header class="menu-bg">
-    <div class="menu">
-      <div class="menu-logo">
-        <a href="#">FlexBlog</a>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FlexBlog</title>
+    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  </head>
+  <body>
+    <div class="super-info-bg">
+      <div class="super-info">
+        <p>Seg / Sex - 08:00 às 18:00</p>
+        <a href="tel:+5521999999999">+55 21 9 9999-9999</a>
+        <p>Av. Ali Perto, 330, Botafogo - RJ</p>
       </div>
-      <nav>
-        <ul>
-          <li><a href="#about">Sobre</a></li>
-          <li><a href="#products">Produtos</a></li>
-          <li><a href="#price">Preço</a></li>
-          <li><a href="#quality">Quality</a></li>
-        </ul>
-      </nav>
     </div>
-  </header>
-  <h1 class="introduction">Novos valores e <br>Propriedades de CSS</h1>
-</body>
+    <header class="menu-bg">
+      <div class="menu">
+        <div class="menu-logo">
+          <a href="#">FlexBlog</a>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#products">Produtos</a></li>
+            <li><a href="#price">Preço</a></li>
+            <li><a href="#quality">Quality</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <h1 class="introduction">Novos valores e <br>Propriedades de CSS</h1>
+    <section class="about" id="about">
+      <div class="about-info">
+        <h1>Sobre</h1>
+        <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições iniegavelmente apropriadas objetivos.</p>
+        <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições iniegavelmente apropriadas objetivos.</p>
+      </div>
+      <div class="about-image">
+        <img src="assets/images/about1.jpg" alt=" Sobre 1">
+      </div>
+      <div class="about-image">
+        <img src="assets/images/about2.jpg" alt=" Sobre 2">
+      </div>
+    </section>
+    <section class="products" id="products">
+      <h1>Produtos</h1>
+      <div class="products-container">
+        <div class="products-item purple">
+          <h2>Purple</h2>
+          <img src="assets/images/products1.jpg" alt="Produtos 1">
+        </div>
+      </div>
+      <div class="products-container">
+        <div class="products-item pink">
+          <h2>Pink</h2>
+          <img src="assets/images/products2.jpg" alt="Produtos 2">
+        </div>
+      </div>
+      <div class="products-container">
+        <div class="products-item blue">
+          <h2>Blue</h2>
+          <img src="assets/images/products3.jpg" alt="Produtos 3">
+        </div>
+      </div>
+    </section>
+    <section class="price" id="price">
+      <div class="price-item">
+        <h2>Cobre</h2>
+        <span><sup>R$</sup>19</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Suporte 24h</li>
+        </ul>
+        <a href="#">Comprar</a>
+      </div>
+      <div class="price-item">
+        <h2>Prata</h2>
+        <span><sup>R$</sup>39</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Suporte 24h</li>
+          <li>Compra Exclusiva</li>
+        </ul>
+        <a href="#">Comprar</a>
+      </div>
+      <div class="price-item">
+        <h2>Ouro</h2>
+        <span><sup>R$</sup>79</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Suporte 24h</li>
+          <li>Compra Exclusiva</li>
+          <li>Download dos Itens</li>
+        </ul>
+        <a href="#">Comprar</a>
+      </div>
+    </section>
+    <section class="quality" id="quality">
+      <div class="quality-item">
+        <h2>Inteligente</h2>
+        <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições iniegavelmente apropriadas objetivos.</p>
+      </div>
+      <div class="quality-item">
+        <h2>Compacto</h2>
+        <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições iniegavelmente apropriadas objetivos.</p>
+      </div>
+      <div class="quality-item">
+        <h2>Econômico</h2>
+        <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições iniegavelmente apropriadas objetivos.</p>
+      </div>
+      <div class="quality-item">
+        <h2>Transparente</h2>
+        <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições iniegavelmente apropriadas objetivos.</p>
+      </div>
+      <div class="quality-item">
+        <h2>Opaco</h2>
+        <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições iniegavelmente apropriadas objetivos.</p>
+      </div>
+      <div class="quality-item">
+        <h2>sustentável</h2>
+        <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições iniegavelmente apropriadas objetivos.</p>
+      </div>
+    </section>
+    <section class="newsletter">
+      <div class="newsletter-info">
+        <h1>Newsletter</h1>
+        <p>assine e fique por dentro das novidades</p>
+      </div>
+      <form class="newsletter-form">
+        <input type="text" placeholder="Seu e-mail">
+        <button type="submit">Assinar</button>
+      </form>
+    </section>
+    <footer class="footer">
+      <p>FlexBlog Todos os direitos reservados.</p>
+    </footer>
+  </body>
 </html>
