Styles added to the quality part

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições iniegavelmente apropriadas objetivos.</p>
       </div>
       <div class="quality-item">
-        <h2>sustentável</h2>
+        <h2>Sustentável</h2>
         <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão das condições iniegavelmente apropriadas objetivos.</p>
       </div>
     </section>
